# ocellar

./: .gitignore  README.md  butane_cut.cfg  butane_cut.cfg_types  pyproject.toml
src/ocellar/: __init__.py  io.py  molecule.py  utils.py
src/ocellar/io/: __init__.py  d_cclib.py  d_internal.py  d_mdanalysis.py  d_openbabel.py  d_ovito.py  driver.py
src/ocellar/utils/: pkdtree.py
tests/: test_graph_reconstruction.py  test_wrap_into_triclinic.py
tests/data/: PhEt.xyz  butane_cut.cfg  dump_el.dump  out.cfg  out.dump  out.xyz  test.py  test_2.py  test_3.ipynb  test_4.py  tmp.xyz  traj.xyz
