[project]
name = "ocellar"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    { name = "lsvvt", email = "losev.tim.v@gmail.com" },
    { name = "lsvvt", email = "lsvvt@github.com" },
    { name = "IlyaRaven", email = "feniksaven@gmail.com" },
]
dependencies = [
    "scipy>=1.13.1",
    "openbabel-wheel>=3.1.1.19",
    "cclib>=1.8.1",
    "networkx[default]>=3.3",
    "MDAnalysis>=2.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "D", "I", "N", "UP", "ANN", "S", "BLE", "FBT", "B"]
ignore = ["D203", "D213", "ANN101", "ANN102"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.flake8]
max-line-length = 88
extend-ignore = ["WPS306", "WPS305", "DAR101", "DAR201"]
inline-quotes = "double"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ocellar = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
scipy = ">=1.13.1,<2"
openbabel = ">=3.1.1,<4"
networkx = ">=3.3,<4"
mdanalysis = ">=2.7.0,<3"
cclib = ">=1.8.1,<2"
