[project]
name = "ocellar"
version = "0.1.4"
description = "ocellar project"
authors = [
    {name = "lsvvt", email = "losev.tim.v@gmail.com"},
    {name = "lsvvt", email = "lsvvt@github.com"},
    {name = "IlyaRaven", email = "feniksaven@gmail.com"},
]
dependencies = [
    "scipy>=1.13.1",
    "openbabel-wheel>=3.1.1.19",
    "cclib>=1.8.1",
    "networkx[default]>=3.3",
    "MDAnalysis>=2.7.0",
    "rdkit>=2025.3.5",
    "ovito>=3.13.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
package-dir = "src"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "D", "I", "N", "UP", "ANN", "S", "BLE", "FBT", "B"]
ignore = ["D203", "D213", "ANN101", "ANN102"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.flake8]
max-line-length = 88
extend-ignore = ["WPS306", "WPS305", "DAR101", "DAR201"]
inline-quotes = "double"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
